--- a/src/main/resources/templates/fragments/screens/addressSuggestionFound.html
+++ b/src/main/resources/templates/fragments/screens/addressSuggestionFound.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
-<th:block th:fragment="addressSuggestionFound(addressInputToCheck, inputName)">
-  <div class="grid__item spacing-above-35 spacing-below-35">
-    <h1 class="h2"
-        th:text="${header != null ? header : #messages.msg('address-validation.check-your-address')}"></h1>
-    <p th:text="${notice != null ? notice : #messages.msg('address-validation.warning.we-updated-the-address-you-entered')}"
-       class="notice--warning"></p>
-  </div>
-  <div class="grid__item address-validation spacing-below-60">
-    <label th:for="validated-address"
-           class="radio-button"
-           id="validated-address-label">
-      <p class="spacing-below-15"
-         th:text="#{address-validation.suggested}"></p>
-      <div th:text="${inputData.get(addressInputToCheck + 'StreetAddress1_validated')}"></div>
-      <div
-          th:text="${inputData.get(addressInputToCheck + 'City_validated')} + ', ' + ${inputData.get(addressInputToCheck + 'State_validated')}"></div>
-      <div th:text="${inputData.get(addressInputToCheck + 'ZipCode_validated')}"></div>
-      <input type="radio" th:name="${inputName}" id="validated-address"
-             th:value="true"
-             th:checked="true">
-    </label>
-    <label th:for="original-address"
-           class="radio-button"
-           id="original-address-label">
-      <p class="spacing-below-15"
-         th:text="#{address-validation.address-entered}"></p>
-      <div th:text="${inputData.get(addressInputToCheck + 'StreetAddress1')}"></div>
-      <div th:text="${inputData.getOrDefault(addressInputToCheck + 'StreetAddress2', '')}"></div>
-      <div
-          th:text="${inputData.get(addressInputToCheck + 'City')} + ', ' + ${inputData.get(addressInputToCheck + 'State')}"></div>
-      <div th:text="${inputData.get(addressInputToCheck + 'ZipCode')}"></div>
-      <input type="radio"
-             th:name="${inputName}" id="original-address"
-             th:value="false"
-             th:checked="false">
-    </label>
-  </div>
-  <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
+<th:block th:fragment="addressSuggestionFound(addressInputToCheck, inputName)"
+          th:with="fieldData=${T(formflow.library.utils.InputUtils).getFieldData(currentSubflowItem, inputData)}">
+    <div class="grid__item spacing-above-35 spacing-below-35">
+        <h1 class="h2"
+            th:text="${header != null ? header : #messages.msg('address-validation.check-your-address')}"></h1>
+        <p th:text="${notice != null ? notice : #messages.msg('address-validation.warning.we-updated-the-address-you-entered')}"
+           class="notice--warning"></p>
+    </div>
+    <div class="grid__item address-validation spacing-below-60">
+        <label th:for="validated-address"
+               class="radio-button"
+               id="validated-address-label">
+            <p class="spacing-below-15"
+               th:text="#{address-validation.suggested}"></p>
+            <div th:text="${fieldData.get(addressInputToCheck + 'StreetAddress1_validated')}"></div>
+            <div
+                    th:text="${fieldData.get(addressInputToCheck + 'City_validated')} + ', ' + ${fieldData.get(addressInputToCheck + 'State_validated')}"></div>
+            <div th:text="${fieldData.get(addressInputToCheck + 'ZipCode_validated')}"></div>
+            <input type="radio" th:name="${inputName}" id="validated-address"
+                   th:value="true"
+                   th:checked="true">
+        </label>
+        <label th:for="original-address"
+               class="radio-button"
+               id="original-address-label">
+            <p class="spacing-below-15"
+               th:text="#{address-validation.address-entered}"></p>
+            <div th:text="${fieldData.get(addressInputToCheck + 'StreetAddress1')}"></div>
+            <div th:text="${fieldData.getOrDefault(addressInputToCheck + 'StreetAddress2', '')}"></div>
+            <div
+                    th:text="${fieldData.get(addressInputToCheck + 'City')} + ', ' + ${fieldData.get(addressInputToCheck + 'State')}"></div>
+            <div th:text="${fieldData.get(addressInputToCheck + 'ZipCode')}"></div>
+            <input type="radio"
+                   th:name="${inputName}" id="original-address"
+                   th:value="false"
+                   th:checked="false">
+        </label>
+    </div>
+    <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
       text=#{general.inputs.continue})}"/>
 </th:block>
 </body>
