--- a/src/main/resources/templates/fragments/inputs/number.html
+++ b/src/main/resources/templates/fragments/inputs/number.html
@@ -2,8 +2,9 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block
-    th:fragment="number"
-    th:with="
+        th:fragment="number"
+        th:with="
+      fieldData=${T(formflow.library.utils.InputUtils).getFieldData(currentSubflowItem, inputData)},
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasTitle=${!#strings.isEmpty(title)},
       hasPattern=${!#strings.isEmpty(pattern)},
@@ -13,28 +14,28 @@
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
         (#arrays.length(errorMessages.get(inputName)) > 0) }"
-    th:assert="${!#strings.isEmpty(inputName)},, ${hasLabel || hasAriaLabel}">
-  <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
-    <label th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
-    <p class="text--help"
-       th:if="${hasHelpText}"
-       th:id="${inputName + '-help-text'}"
-       th:text="${helpText}"></p>
-    <input type="text" inputmode="numeric"
-           class="text-input form-width--med"
-           th:id="${inputName}"
-           th:name="${inputName}"
-           th:placeholder="${placeholder}"
-           th:attr="
+        th:assert="${!#strings.isEmpty(inputName)},, ${hasLabel || hasAriaLabel}">
+    <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
+        <label th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
+        <p class="text--help"
+           th:if="${hasHelpText}"
+           th:id="${inputName + '-help-text'}"
+           th:text="${helpText}"></p>
+        <input type="text" inputmode="numeric"
+               class="text-input form-width--med"
+               th:id="${inputName}"
+               th:name="${inputName}"
+               th:placeholder="${placeholder}"
+               th:attr="
             title=${hasTitle ? title : #messages.msg('general.inputs.number')},
             pattern=${hasPattern ? pattern : '^\d*(\.\d{0,2})?$'},
             aria-describedby=${hasHelpText ? inputName + '-help-text' : ''},
             aria-labelledby=${hasAriaLabel ? ariaLabel : ''},
             aria-invalid=${hasError}"
-           th:value="${inputData.getOrDefault(inputName, '')}">
-    <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
-  </div>
+               th:value="${fieldData.getOrDefault(inputName, '')}">
+        <th:block
+                th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
+    </div>
 </th:block>
 </body>
 </html>
