--- a/src/main/resources/templates/fragments/inputs/selectOption.html
+++ b/src/main/resources/templates/fragments/inputs/selectOption.html
@@ -2,14 +2,15 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block
-    th:fragment="selectOption"
-    th:assert="
+        th:fragment="selectOption"
+        th:with="fieldData=${T(formflow.library.utils.InputUtils).getFieldData(currentSubflowItem, inputData)}"
+        th:assert="
       ${value != null},
       ${!#strings.isEmpty(optionText)}">
-  <option
-      th:value="${value}"
-      th:selected="${inputData.getOrDefault(inputName, '').equals(value)}"
-      th:text="${optionText}"></option>
+    <option
+            th:value="${value}"
+            th:selected="${fieldData.getOrDefault(inputName, '').equals(value)}"
+            th:text="${optionText}"></option>
 </th:block>
 </body>
 </html>
